libs/modkit-db-macros/tests/ui/err_conflicting_tenant.stderr
error: secure: specify either `tenant_col` or `no_tenant`, not both
 --> tests/ui/err_conflicting_tenant.rs:8:5
  |
8 |     no_tenant,
  |     ^^^^^^^^^
